--- a/nginx.conf
+++ b/nginx.conf
@@ -1,17 +1,37 @@
-events {}
+events{}
 
-http {
+http{
     server {
-        listen 8080;
-        access_log /dev/stdout;
-        error_log /dev/stdout;
-
-        location /cloudRunAdmin/ {
-            proxy_pass http://localhost:11021;
+        listen 5000;
+        # access_log /dev/stdout;
+        # error_log /dev/stdout;
+        # Notice the additional / at the end of the proxy_pass directive. 
+        # NGINX will strip the matched prefix /cloudRunAdmin and pass the remainder 
+        # to the backend server at the URI /. 
+        # Therefore, http://myserver:80/cloudRunAdmin/api will 
+        # post to the backend at http://localhost:11021/api
+        location / {
+            proxy_pass http://127.0.0.1:11021/;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_buffering off;
+            proxy_request_buffering off;
+            proxy_http_version 1.1;
+            proxy_intercept_errors on;
         }
 
-        location / {
-            proxy_pass http://localhost:11020;
+        location /agent {
+            proxy_pass http://127.0.0.1:11020/;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_buffering off;
+            proxy_request_buffering off;
+            proxy_http_version 1.1;
+            proxy_intercept_errors on;
         }
     }
 }
